# bindgen-reproduction

./: Cargo.toml
src/: lib.rs  main.rs
www/: index.js  package-lock.json  package.json
