[package]
name = "bindgen-reproduction"
version = "0.1.0"
edition = "2021"

# Shared dependencies across all targets
[dependencies]
async-trait = "0.1"
log = "0.4"

# Dependencies used for the WebAssembly target
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.53"

[profile.release]
debug = true

[lib]
name = "libreproduction"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "reproduction-desktop"
path = "src/main.rs"
